[gd_scene load_steps=21 format=3 uid="uid://vqb4pex17mi0"]

[ext_resource type="Script" path="res://LevelSelection.gd" id="1_b5yxq"]
[ext_resource type="Texture2D" uid="uid://8xw2usp5jq6p" path="res://Images/gradient-galaxy-background-free-vector.jpg" id="2_kipu7"]
[ext_resource type="FontFile" uid="uid://dkppgt0hpuagh" path="res://fonts/Robot Go.ttf" id="3_fmv08"]
[ext_resource type="FontFile" uid="uid://b7n2neqcfe60n" path="res://fonts/FutureTech.ttf" id="4_7gbdj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5xom"]
bg_color = Color(0.0324716, 0.350373, 0.470704, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqn5x"]
bg_color = Color(0.39392, 0.548824, 0.572765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0u0pf"]
bg_color = Color(0.0313726, 0.34902, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4cmtv"]
bg_color = Color(0.392157, 0.54902, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ydsm"]
bg_color = Color(0.0313726, 0.34902, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4kkgk"]
bg_color = Color(0.392157, 0.54902, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vr151"]
bg_color = Color(0.0313726, 0.34902, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfi2e"]
bg_color = Color(0.392157, 0.54902, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dg5o"]
bg_color = Color(0.0313726, 0.34902, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iimf"]
bg_color = Color(0.392157, 0.54902, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1yduj"]
bg_color = Color(0.0313726, 0.34902, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnxx5"]
bg_color = Color(0.392157, 0.54902, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pb1r5"]
bg_color = Color(0.0313726, 0.34902, 0.470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rskdo"]
bg_color = Color(0.392157, 0.54902, 0.572549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vgi4"]
bg_color = Color(0.819304, 0.501037, 0.8525, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vee37"]
bg_color = Color(0.830905, 0.710994, 0.89284, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5yxq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.101789
anchor_top = -0.0527108
anchor_right = 1.21653
anchor_bottom = 1.05873
offset_right = -11.9999
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kipu7")
metadata/_edit_use_anchors_ = true

[node name="LevelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -119.5
offset_right = 114.5
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2

[node name="Level1" type="Button" parent="LevelContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Level3")
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_v5xom")
theme_override_styles/hover = SubResource("StyleBoxFlat_dqn5x")
text = "Level 1"

[node name="Level2" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0u0pf")
theme_override_styles/hover = SubResource("StyleBoxFlat_4cmtv")
text = "Level 2"

[node name="Level3" type="Button" parent="LevelContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Level1")
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_1ydsm")
theme_override_styles/hover = SubResource("StyleBoxFlat_4kkgk")
text = "Level 3"

[node name="Level4" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_vr151")
theme_override_styles/hover = SubResource("StyleBoxFlat_sfi2e")
text = "Level 4"

[node name="Level5" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_7dg5o")
theme_override_styles/hover = SubResource("StyleBoxFlat_3iimf")
text = "Level 5"

[node name="Level6" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_1yduj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tnxx5")
text = "Level 6"

[node name="Level7" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pb1r5")
theme_override_styles/hover = SubResource("StyleBoxFlat_rskdo")
text = "Level 7"

[node name="Level8" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pb1r5")
theme_override_styles/hover = SubResource("StyleBoxFlat_rskdo")
text = "Level 8"

[node name="Level9" type="Button" parent="LevelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pb1r5")
theme_override_styles/hover = SubResource("StyleBoxFlat_rskdo")
text = "Level 9"

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 588.0
offset_right = 1198.0
offset_bottom = 723.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 22

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 725.0
offset_top = 885.0
offset_right = 900.0
offset_bottom = 945.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_fmv08")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_2vgi4")
theme_override_styles/hover = SubResource("StyleBoxFlat_vee37")
text = "Main Menu"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.5
offset_top = -296.0
offset_right = 453.5
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.914733, 0.723172, 0.210425, 1)
theme_override_colors/font_shadow_color = Color(0.941176, 0.752941, 0.247059, 1)
theme_override_fonts/font = ExtResource("4_7gbdj")
theme_override_font_sizes/font_size = 60
text = "Code Your Way Home!"
horizontal_alignment = 1

[connection signal="pressed" from="LevelContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
